--- a/job-listing-filtering/src/pages/Home/Home.module.css
+++ b/job-listing-filtering/src/pages/Home/Home.module.css
@@ -11,6 +11,7 @@
   flex-direction: column;
   gap: 24px;
   width: 85vw;
+  max-width: 1000px;
   margin: 48px auto;
 }
 
